[metadata]
name = device-module-austinhellerrepo
version = 0.0.8
author = Austin Heller
description = A basic Esp32 package for running and implementing device modules
url = https://github.com/AustinHellerRepo/Socket
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
